# src/backend/backend/Features/Product/ProductController.cs
@@ -43,4 +43,35 @@ public class ProductController : ControllerBase
         return Ok(returnProducts);
     }
     
+    
+    [HttpPost("create")]
+    [ProducesResponseType(StatusCodes.Status201Created)]
+    public async Task<IActionResult> CreateProduct([FromBody] ProductCreationDto productCreationDto)
+    {
+        var product = new ProductDetail
+        {
+            Id = Guid.NewGuid().ToString(),
+            Name = productCreationDto.Name,
+            Description = productCreationDto.Description,
+            Category = productCreationDto.Category,
+            Quantity =  productCreationDto.Quantity,
+            Price =  productCreationDto.Price,
+            ImageUrl =  productCreationDto.ImageUrl,
+            CreatedAt = DateTime.UtcNow
+        };
+        var productGrain = _grainFactory.GetGrain<IProductGrain>(product.Id);
+        await productGrain.CreateOrUpdateProduct(product);
+        return Ok();
+    }
+    
+    //[Obsolete("WIP")]
+    [HttpDelete("delete/{productId}")]
+    [ProducesResponseType(StatusCodes.Status200OK)]
+    public async Task<IActionResult> DeleteProductById(string productId)
+    {
+        var productGrain = _grainFactory.GetGrain<IProductGrain>(productId);
+        await productGrain.RemoveProduct();
+        return Ok();
+    }
+    
 }
