# src/client/swagger.json
@@ -116,6 +116,175 @@
         }
       }
     },
+    "/promotion/all": {
+      "get": {
+        "tags": ["Promotion"],
+        "operationId": "Promotion_GetAllPromotions",
+        "produces": ["text/plain", "application/json", "text/json"],
+        "responses": {
+          "200": {
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/PromotionState"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/promotion/all/active": {
+      "get": {
+        "tags": ["Promotion"],
+        "operationId": "Promotion_GetActivePromotions",
+        "produces": ["text/plain", "application/json", "text/json"],
+        "responses": {
+          "200": {
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/PromotionState"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/promotion/all/inactive": {
+      "get": {
+        "tags": ["Promotion"],
+        "operationId": "Promotion_GetNonActivePromotions",
+        "produces": ["text/plain", "application/json", "text/json"],
+        "responses": {
+          "200": {
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/PromotionState"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/promotion/add": {
+      "post": {
+        "tags": ["Promotion"],
+        "operationId": "Promotion_CreatePromotion",
+        "consumes": ["application/json", "text/json", "application/*+json"],
+        "produces": ["text/plain", "application/json", "text/json"],
+        "parameters": [
+          {
+            "name": "promotionCreationDto",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/PromotionCreationDto"
+            },
+            "x-nullable": false
+          }
+        ],
+        "responses": {
+          "201": {
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/PromotionState"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/promotion/add/{promotionId}/{productId}": {
+      "post": {
+        "tags": ["Promotion"],
+        "operationId": "Promotion_AddProductToPromotion",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "promotionId",
+            "in": "path",
+            "required": true,
+            "x-nullable": true
+          },
+          {
+            "type": "string",
+            "name": "productId",
+            "in": "path",
+            "required": true,
+            "x-nullable": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/promotion/remove/{promotionId}/{productId}": {
+      "delete": {
+        "tags": ["Promotion"],
+        "operationId": "Promotion_RemoveProductFromPromotion",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "promotionId",
+            "in": "path",
+            "required": true,
+            "x-nullable": true
+          },
+          {
+            "type": "string",
+            "name": "productId",
+            "in": "path",
+            "required": true,
+            "x-nullable": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/promotion/status/{promotionId}/active/{status}": {
+      "put": {
+        "tags": ["Promotion"],
+        "operationId": "Promotion_SetPromotionStatus",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "promotionId",
+            "in": "path",
+            "required": true,
+            "x-nullable": true
+          },
+          {
+            "type": "boolean",
+            "name": "status",
+            "in": "path",
+            "required": true,
+            "x-nullable": false
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/product/productId": {
       "get": {
         "tags": ["Product"],
@@ -173,6 +342,49 @@
         }
       }
     },
+    "/product/create": {
+      "post": {
+        "tags": ["Product"],
+        "operationId": "Product_CreateProduct",
+        "consumes": ["application/json", "text/json", "application/*+json"],
+        "parameters": [
+          {
+            "name": "productCreationDto",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/ProductCreationDto"
+            },
+            "x-nullable": false
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/product/delete/{productId}": {
+      "delete": {
+        "tags": ["Product"],
+        "operationId": "Product_DeleteProductById",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "productId",
+            "in": "path",
+            "required": true,
+            "x-nullable": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/category/all": {
       "get": {
         "tags": ["Category"],
@@ -186,7 +398,7 @@
             "schema": {
               "type": "array",
               "items": {
-                "$ref": "#/definitions/ProductCategory"
+                "type": "string"
               }
             }
           }
@@ -290,7 +502,8 @@
         "category",
         "quantity",
         "price",
-        "imageUrl"
+        "imageUrl",
+        "createdAt"
       ],
       "properties": {
         "id": {
@@ -315,6 +528,10 @@
         },
         "imageUrl": {
           "type": "string"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
         }
       }
     },
@@ -341,6 +558,84 @@
         "Games",
         "Other"
       ]
+    },
+    "PromotionState": {
+      "type": "object",
+      "required": ["id", "name", "productIds", "active"],
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "productIds": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "bannerImg": {
+          "type": "string"
+        },
+        "active": {
+          "type": "boolean"
+        }
+      }
+    },
+    "PromotionCreationDto": {
+      "type": "object",
+      "required": ["name", "active"],
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "bannerImg": {
+          "type": "string"
+        },
+        "active": {
+          "type": "boolean"
+        }
+      }
+    },
+    "ProductCreationDto": {
+      "type": "object",
+      "required": [
+        "name",
+        "description",
+        "category",
+        "quantity",
+        "price",
+        "imageUrl"
+      ],
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "category": {
+          "$ref": "#/definitions/ProductCategory"
+        },
+        "quantity": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "price": {
+          "type": "number",
+          "format": "decimal"
+        },
+        "imageUrl": {
+          "type": "string"
+        }
+      }
     }
   }
 }
